# ChangeLog for app-editors/joe
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/joe/ChangeLog,v 1.74 2010/04/13 18:20:59 armin76 Exp $

  13 Apr 2010; Raúl Porcel <armin76@gentoo.org> joe-3.7-r1.ebuild:
  alpha stable wrt #259482

  10 Mar 2010; Joseph Jezak <josejx@gentoo.org> joe-3.7-r1.ebuild:
  Marked ppc/ppc64 stable for bug #259482.

  07 Mar 2010; Markus Meier <maekke@gentoo.org> joe-3.7-r1.ebuild:
  arm stable, bug #259482

  06 Mar 2010; Tiago Cunha <tcunha@gentoo.org> joe-3.7-r1.ebuild:
  stable sparc, bug 259482

  06 Mar 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> joe-3.7-r1.ebuild:
  x86 stable wrt bug #259482

  05 Mar 2010; Pacho Ramos <pacho@gentoo.org> -joe-3.7.ebuild,
  joe-3.7-r1.ebuild:
  amd64 stable, bug 259482 . Also remove old testing and broken version

*joe-3.7-r1 (16 Jan 2010)

  16 Jan 2010; Pacho Ramos <pacho@gentoo.org> +joe-3.7-r1.ebuild,
  +files/joe-3.7-segfault-fix.patch:
  Fix segfault, bug 283508. Thanks to Martin von Gagern

  15 Nov 2009; Raúl Porcel <armin76@gentoo.org> joe-3.5.ebuild,
  joe-3.7.ebuild:
  Add ~ia64

  08 Mar 2009; Timothy Redaelli <drizzt@gentoo.org> joe-3.7.ebuild:
  Add ~x86-fbsd keyword wrt #261620

  07 Mar 2009; Christian Faulhammer <fauli@gentoo.org> joe-3.5.ebuild,
  joe-3.7.ebuild:
  prune built_with_use and thus depend on a higher version of xterm

  17 Feb 2009; Ulrich Mueller <ulm@gentoo.org> joe-3.5.ebuild,
  joe-3.7.ebuild:
  Recent x11-terms/xterm ebuilds don't support the paste64 USE flag anymore.
  Don't fail in this case, bug 258012.

  07 Jan 2009; Patrick Lauer <patrick@gentoo.org> joe-3.7.ebuild:
  Small fix for docs, fixes #254007

*joe-3.7 (04 Jan 2009)

  04 Jan 2009; Patrick Lauer <patrick@gentoo.org> +joe-3.7.ebuild:
  Bump to 3.7, fixes #253372

  11 Sep 2008; Christian Faulhammer <opfer@gentoo.org>
  -files/joe-3.0-overflow.patch, -files/joe-3.1-overflow.patch,