@@ -1,9 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX joe-3.7-dont-mess-with-solaris.patch 623 RMD160 21ac4365f74effea0621f24511f1148a5c7372ea SHA1 02dc4452eff5351227a82e4b3236ddc8bcddd560 SHA256 7c25fe5258dc1151353555401aa774dde4c988bf6e3f1c77ba22a0fd7af3e258
 AUX joe-3.7-segfault-fix.patch 562 RMD160 2e8e889006dbd460e2d473c31f9f3659565dca47 SHA1 c0b24d8abb0ac7eba501fa1831a07f3b93550692 SHA256 bf38cb1db098a7efa880bc4a962b03f180ae5481f2a7a66a5e97f799241c71c3
 DIST joe-3.5.tar.gz 613815 RMD160 c58d2bdd4882bf698722d5a8e840f3d7a0221fc6 SHA1 aeee6bb71ed1e9b9c9a2a64d8e078a06245957e5 SHA256 a295f1c5e0cb0f0ae0446c419a248517cb04ae1881f982964a7a7595cde9f2e6
 DIST joe-3.7.tar.gz 696036 RMD160 7e2c72a750c6aac4732cf4369bceee5333460f15 SHA1 54398578886d4a3d325aece52c308a939d31101d SHA256 cae456e1ad5a8c1d3c94920a3416c2347277739b260e3494d3bc0f2b9b73106f
-EBUILD joe-3.5.ebuild 1540 RMD160 73d8d86e960b43e0e3f4a8e996ce5a54c4ab9295 SHA1 da1538874dc171b6b8e2eee119b5b88f7d934975 SHA256 9c52036019c9c24db6887aba3ce49b29712638c00f5b58e4985868c4f259db0d
+EBUILD joe-3.5.ebuild 1537 RMD160 cd2e126d7c33a2718caf7de783ecda43418efa91 SHA1 c57509ed41f5d613c00c9a191e3027567f4efc5b SHA256 0d30f962e6cda49a53c497925326f97e45888cce4e0e829b0be9f4e9682a0f56
 EBUILD joe-3.7-r1.ebuild 1675 RMD160 bb4702dab247c1cad7eceb0e3fac4f18a3f320ff SHA1 35ea7f532898452dfb4b5a890df559d4d758161e SHA256 ccfd95205444dc979b7a489b19c7a519c54aec4404bb23293db1d352a71c952d
 EBUILD joe-3.7.ebuild 1590 RMD160 5ca5453db7600793fda68eccadc75846bda3528c SHA1 9e7353b43f1fce14847adf0be7ace6afde74f26e SHA256 c5a5545f7c07a34a35edffd0213d6b8044f0caf160e12c2c61c97376e3b14b42
-MISC ChangeLog 9170 RMD160 d9668e6322e4195866584d5390767f620a21609e SHA1 7e21e016f6ffda5bd698baf983cc8dd709ccedb3 SHA256 046c15dfa6d28b437468e33aedc5272ec17972a7133b1d5ff04ef0f1783a69ff
-MISC metadata.xml 744 RMD160 57ae49e0dbd2ccfdbb994d1d43ea1b4167ce5637 SHA1 a7f6a18d6ab448a54c88621687d8eb6701ac016e SHA256 a0af8fa4bccf2a9372d5b4d08e3b1745edd2b2a2cc8bfb9ef2ba9dff66d608e7
+MISC ChangeLog 9247 RMD160 b2e64be77c4e2429b17fc91aabfb1f1ceff76e47 SHA1 1c47cf9fe02d53185e39e4348258781b1fe64e4b SHA256 15b209f16a0cecfdca545ce7016c11958ba33e6980ea44de778e3c4387363a10
+MISC metadata.xml 723 RMD160 74f3a0dab7ab75de3eb4ac1fb2419ff303f324db SHA1 1cd5f39e6362d462c5c75e7d86e7900706fa2238 SHA256 927bea091fb3d3664abb5b1eba1d70e34b7f9b9dec6f50f995e24bcb0688bea3
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (Darwin)
+
+iEYEARECAAYFAk81Vt0ACgkQX3X2B8XHTolsVwCfXlkTs8OzFglW45Xtz9XfOsSS
+4oQAn3IH5WJxSW4u4e7LD7sUFhZTFVr7
+=Zioa
+-----END PGP SIGNATURE-----
