@@ -1,6 +1,9 @@
 # ChangeLog for app-editors/joe
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/joe/ChangeLog,v 1.74 2010/04/13 18:20:59 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/joe/ChangeLog,v 1.75 2010/10/19 06:25:19 leio Exp $
+
+  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> joe-3.5.ebuild:
+  Drop to ~mips
 
   13 Apr 2010; Raúl Porcel <armin76@gentoo.org> joe-3.7-r1.ebuild:
   alpha stable wrt #259482
